# spotify-project

./: .dockerignore  .gitattributes  .gitignore  AUDIT_AND_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIXED_3.md  LICENSE  README.md  TODO.md  app.py  application-idea.md  bootstrap.bat  bootstrap.sh  docker-compose.yml  pyproject.toml  run_pipeline.sh  workflow-suggestions.md
.claude/: settings.local.json
.playwright-mcp/: page-2026-05-23T14-55-39-265Z.yml  page-2026-05-23T14-56-14-875Z.yml  page-2026-05-23T14-56-25-281Z.yml  page-2026-05-23T14-56-37-142Z.yml  page-2026-05-23T14-56-46-237Z.yml  page-2026-05-23T14-56-56-839Z.yml  page-2026-05-23T14-57-07-019Z.yml  page-2026-05-23T14-57-22-888Z.yml  page-2026-05-23T14-58-21-619Z.yml  page-2026-05-23T15-13-49-546Z.yml  page-2026-05-23T15-13-58-098Z.yml  page-2026-05-23T15-15-33-287Z.yml  page-2026-05-23T15-15-42-358Z.yml  page-2026-05-23T15-15-59-729Z.yml  page-2026-05-23T15-16-08-895Z.yml  page-2026-05-23T15-16-17-778Z.yml  page-2026-05-23T15-16-24-645Z.yml  page-2026-05-23T15-16-41-325Z.yml  page-2026-05-23T15-16-46-344Z.yml  page-2026-05-23T15-19-10-819Z.yml  page-2026-05-23T15-23-22-405Z.yml  page-2026-05-23T15-23-43-693Z.yml  page-2026-05-23T15-24-07-917Z.yml  page-2026-05-23T15-24-22-901Z.yml  page-2026-05-23T15-24-52-302Z.yml  page-2026-05-24T09-32-06-219Z.yml  page-2026-05-24T09-32-46-159Z.yml  page-2026-05-24T09-33-02-725Z.yml  page-2026-05-24T09-33-23-317Z.yml  page-2026-05-24T09-33-45-325Z.yml  page-2026-05-24T09-34-00-098Z.yml  page-2026-05-24T09-34-17-916Z.yml  page-2026-05-24T09-34-32-572Z.yml  page-2026-05-24T10-00-16-396Z.yml  page-2026-05-24T10-05-58-848Z.yml  page-2026-05-24T10-06-08-798Z.yml  page-2026-05-24T10-08-33-881Z.yml  page-2026-05-24T10-09-02-497Z.yml  page-2026-05-24T10-10-32-985Z.yml  page-2026-05-24T10-10-47-146Z.yml  (+80 more)
audit/: IMPROVEMENT_PLAN.md
datamining/: SpotifyFeatures_5000.csv  dataset_datamining.ipynb  spotify_datamining_on_hold.ipynb
docs/: ML_models_proposals.md  State_of_mind_27022026.txt  WEARABLE_DATA.md  Wham-Bam-Shang-A-Lang.md  analysis_participants.md  data_collection_template.md  eindproef.md  handoff_prompt.md  notebook_plan.md  (+4 more)
(+246 files in other folders)
