[project]
name = "spotify-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fitparse>=1.2.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
